fix: incompatibility Java version method